# hmat-omp

./: .gitattributes  CMakeLists.txt  README.md  run.sh  run_tests.sh
.github/workflows/: main.yml
include/: compression.h  hodlr_routines.h  hodlr_routines_omp.h  hss_routines.h  hss_routines_omp.h  kernel.h  matrix.h  utils.h
src/: main.cpp  main_hodlr.cpp  main_hss.cpp
